# snapshot-store

./: .gitignore  Cargo.toml  LICENSE  README.md  dplaisftjta1pdgsklts3bgpbmboqidh.darc  manifest  setup-beads.sh
.agents/plans/phase-1/: 00-overview.md  01-m1-page-store-core.md  02-m2-manifest-codec.md  03-m3-metadata-db.md  04-exit-gates-and-verification.md
.agents/plans/phase-2/: 00-overview.md  01-m4-foundations.md  02-m4-grpc-and-client.md  03-m5-page-channel.md  04-m6-crash-harness.md  05-exit-gates-and-verification.md
.agents/plans/phase2-closeout-m8-joint-fork-integrity/: 00-overview.md  01-tracker-and-entry.md  02-harness-and-inventory.md  03-wiring-and-performance.md  04-ci-and-evidence.md  05-closeout-and-handback.md  06-review-technical.md  07-review-operability.md  08-review-resolution.md  09-remaining-execution.md  10-review-technical-refresh.md  11-review-operability-refresh.md  12-review-resolution-refresh.md  13-completion-audit.md
.agents/plans/phase3-m7-gc-exit-gate/: 00-overview.md  01-storage-surfaces.md  02-gc-engine.md  03-server-wiring.md  04-property-suite.md  05-crash-harness.md  06-ci-and-evidence.md  07-review-log.md
.agents/plans/phase5-readiness-gc-benchmark-and-transport-revalidation/: 00-overview.md  01-page-channel-flake.md  02-hardware-and-evidence.md  03-transport-revalidation.md  04-gc-benchmark.md  05-handback-and-session.md
.agents/plans/snapstore-v1-stable-schema-and-ready-signal/: 00-overview.md  01-author-stable-schema.md  02-ready-signal-and-handback.md  03-resolution.md
.agents/requests/phase2-closeout-m8-joint-fork-integrity/: 00-overview.md  01-current-state.md  02-requested-work.md  03-verification-offer.md  04-resolution-immediate.md  05-resolution.md  06-phases-track-verification.md  07-controlplane-playbook-ready-signal.md
.agents/requests/phase3-m7-gc-exit-gate/: 00-overview.md  01-context-and-anchors.md  02-what-the-phase-gate-needs.md  03-verification-offer.md  04-resolution.md  05-verification.md
.agents/requests/phase5-readiness-gc-benchmark-and-transport-revalidation/: 00-overview.md  01-current-state.md  02-requested-work.md  03-verification-offer.md  04-resolution.md
.beads/: metadata.json
.github/workflows/: ci.yaml  nightly.yaml
crates/snapstore-cli/: Cargo.toml
crates/snapstore-cli/src/: main.rs
crates/snapstore-cli/tests/: cli.rs
crates/snapstore-client/: Cargo.toml  build.rs
crates/snapstore-client/src/: blocking.rs  client.rs  details.rs  error.rs  helpers.rs  lib.rs  retry.rs  transport.rs
crates/snapstore-client/src/tests/: flaky_server.rs  mod.rs  test_cases.rs
crates/snapstore-client/tests/: page_channel_fallback.rs
crates/snapstore-crash/: Cargo.toml
crates/snapstore-crash/src/: child.rs  fsck.rs  fullstack.rs  gc_fixture.rs  harness.rs  lib.rs  main.rs
crates/snapstore-crash/tests/: harness.rs
crates/snapstore-localpath/: Cargo.toml
crates/snapstore-localpath/src/: client.rs  lib.rs  linux.rs  proto.rs
crates/snapstore-manifest/: Cargo.toml
crates/snapstore-manifest/benches/: flatten.rs
crates/snapstore-manifest/src/: lib.rs
crates/snapstore-meta/: Cargo.toml
crates/snapstore-meta/src/: actor.rs  error.rs  lib.rs  pool.rs  schema.rs  tests.rs  types.rs
crates/snapstore-meta/src/migrations/: 001_initial.sql  002_gc_state.sql
crates/snapstore-pagestore/: Cargo.toml
crates/snapstore-pagestore/benches/: ingest.rs  read_path.rs
crates/snapstore-pagestore/src/: index.rs  ingest.rs  lib.rs  pack.rs  read_cache.rs
crates/snapstore-server/: Cargo.toml  build.rs
crates/snapstore-server/benches/: grpc_bench.rs
crates/snapstore-server/src/: build_server.rs  config.rs  errors.rs  gc.rs  lib.rs  main.rs  metrics.rs  page_channel.rs  service.rs  startup.rs
crates/snapstore-server/tests/: e2e_exploration.rs  gc_properties.rs  gc_readiness_bench.rs  page_channel.rs  page_channel_perf.rs  server.rs
crates/snapstore-server/tests/gc_model/: mod.rs
crates/snapstore-store/: Cargo.toml
crates/snapstore-store/benches/: put_snapshot.rs
crates/snapstore-store/src/: gc.rs  lib.rs
crates/snapstore-testgen/: Cargo.toml
crates/snapstore-testgen/src/: lib.rs
crates/snapstore-types/: Cargo.toml
crates/snapstore-types/src/: lib.rs
data/meta/: tree.db-shm  tree.db-wal
data/store/pages/: pack-00000000.spk
docs/: bench-baseline.md
docs/design/: sync-async-bridge.md
docs/prompts/: phase-1-deterministic-execution-snapshot-store-m0-m3.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: manifest_decode.rs
proto/: snapshot_store.proto
scripts/: m7-evidence.sh  m8_joint_fork_integrity_evidence.py  m8_joint_fork_integrity_evidence_test.py  m8_joint_fork_integrity_fake_harness.py  m8_joint_fork_integrity_fake_harness_test.py  phase5-readiness-evidence.sh  phase5_readiness_evidence.py  phase5_readiness_evidence_test.py
