[package]
name = "snapstore-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "snapstorectl"
path = "src/main.rs"

[dependencies]
snapstore-client  = { path = "../snapstore-client" }
snapstore-crash   = { path = "../snapstore-crash" }
snapstore-manifest = { path = "../snapstore-manifest" }
snapstore-types   = { path = "../snapstore-types" }

clap       = { version = "4", features = ["derive"] }
serde_json = "1"
serde      = { workspace = true }
thiserror  = "2"

[dev-dependencies]
snapstore-server  = { path = "../snapstore-server" }
snapstore-store   = { path = "../snapstore-store" }
snapstore-testgen = { path = "../snapstore-testgen" }
snapstore-manifest = { path = "../snapstore-manifest" }
tempfile   = "3"
tokio      = { workspace = true }
blake3     = "1"
serde_json = "1"
