[package]
name = "snapstore-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
tracing = { workspace = true }
blake3 = "1"
thiserror = "2"
bytes = "1"

# Deliberate dependency: snapstore-manifest is pure / no I/O; it is used here
# solely for build_snapshot_container (serialising guest RAM pages +
# DeviceBlob into the .spm wire format). Recorded as an intentional deviation
# from ARCHITECTURE.md §1's "client = types + proto + localpath" rule.
snapstore-manifest = { path = "../snapstore-manifest" }
snapstore-types = { path = "../snapstore-types" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }

[build-dependencies]
protoc-bin-vendored = { workspace = true }
tonic-build = { workspace = true }
