[package]
name = "snapstore-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
tracing = { workspace = true }
blake3 = "1"
thiserror = "2"
bytes = "1"

# Deliberate dependency: snapstore-manifest is pure / no I/O; it is used here
# solely for build_snapshot_container (serialising guest RAM pages +
# DeviceBlob into the .spm wire format). Recorded as an intentional deviation
# from ARCHITECTURE.md §1's "client = types + proto + localpath" rule.
snapstore-manifest = { path = "../snapstore-manifest" }
snapstore-types = { path = "../snapstore-types" }

[target.'cfg(target_os = "linux")'.dependencies]
snapstore-localpath = { path = "../snapstore-localpath" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
blake3 = "1"
prometheus = { workspace = true }
nix = { version = "0.29", features = ["socket"] }
snapstore-server = { path = "../snapstore-server" }
snapstore-types = { path = "../snapstore-types" }

[build-dependencies]
protoc-bin-vendored = { workspace = true }
tonic-build = { workspace = true }
