[package]
name = "snapstore-crash"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "snapstore-crash"
path = "src/main.rs"

[features]
# Enable crash-injection tests via named failpoints.
# Requires the child binary to be built with this feature.
# Usage: cargo run -p snapstore-crash --features failpoints -- run --cycles N --seed S --matrix-passes K
failpoints = [
    "dep:fail",
    "fail/failpoints",
    "snapstore-store/failpoints",
    "snapstore-pagestore/failpoints",
]

[dependencies]
snapstore-store    = { path = "../snapstore-store" }
snapstore-pagestore = { path = "../snapstore-pagestore" }
snapstore-meta     = { path = "../snapstore-meta" }
snapstore-manifest = { path = "../snapstore-manifest" }
snapstore-types    = { path = "../snapstore-types" }
# Full-stack scenario: blocking client drives the server-under-test via gRPC.
snapstore-client   = { path = "../snapstore-client" }

# SQLite direct access for fsck (read-only, bypasses snapstore-meta API).
rusqlite = { version = "0.32", features = ["bundled"] }

blake3   = "1"
crc32fast = "1"
rand     = "0.8"

# Process management (SIGKILL on Linux).
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"   # O_SYNC flag

# Report serialisation.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "2"
tempfile  = "3"

clap = { version = "4", features = ["derive"] }

# Tokio runtime required by the blocking client (thin current_thread wrapper).
tokio = { workspace = true }

# Optional failpoint runtime (arming via FAILPOINTS env var in the child).
fail = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3"
