[package]
name = "snapstore-localpath"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = "1"
snapstore-types = { path = "../snapstore-types" }
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["socket", "uio", "fs", "mman"] }

[dev-dependencies]
tempfile = "3"
