[package]
name = "snapstore-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
snapstore-types = { path = "../snapstore-types" }
blake3 = "1"
thiserror = "2"
zstd = "0.13"
proptest = { version = "1", optional = true }

[features]
test-strategies = ["dep:proptest"]

[dev-dependencies]
proptest = "1"
