[package]
name = "snapstore-pagestore"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Enable named failpoints at fsync/rename boundaries for crash-consistency
# testing.  Off by default; NEVER enabled in release builds.
# Usage: cargo test -p snapstore-pagestore --features failpoints
failpoints = ["dep:fail", "fail/failpoints"]
# Test-only GC instrumentation (M7 property suite): exposes the
# read-retry counter proving the R2 repoint/unlink race was exercised.
# NEVER enabled in release builds.
gc-test-hooks = []

[dependencies]
snapstore-types = { path = "../snapstore-types" }
blake3 = { version = "1", features = ["rayon"] }
rayon = "1"
parking_lot = "0.12"
crc32fast = "1"
bytes = "1"
thiserror = "2"
fail = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3"
snapstore-testgen = { path = "../snapstore-testgen" }

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[[bench]]
name = "ingest"
harness = false

[[bench]]
name = "read_path"
harness = false
