[package]
name = "snapstore-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "snapstore-server"
path = "src/main.rs"

[dependencies]
# workspace deps
prost        = { workspace = true }
prost-types  = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
tonic        = { workspace = true }
tonic-health = { workspace = true }
tonic-types  = { workspace = true }
tower        = { workspace = true }
hyper-util   = { workspace = true }
prometheus   = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
serde        = { workspace = true }
toml         = { workspace = true }

# internal crates
snapstore-store     = { path = "../snapstore-store" }
snapstore-meta      = { path = "../snapstore-meta" }
snapstore-pagestore = { path = "../snapstore-pagestore" }
snapstore-manifest  = { path = "../snapstore-manifest" }
snapstore-types     = { path = "../snapstore-types" }

# additional
blake3        = "1"
thiserror     = "2"
bytes         = "1"
hyper         = { version = "1", features = ["http1", "server"] }
futures-core  = "0.3"

[dev-dependencies]
tempfile = "3"
snapstore-testgen = { path = "../snapstore-testgen" }
tokio = { workspace = true }

[build-dependencies]
protoc-bin-vendored = { workspace = true }
tonic-build         = { workspace = true }
