[package]
name = "snapstore-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "snapstore-server"
path = "src/main.rs"

[features]
# M7 GC property-suite instrumentation (04-property-suite.md).  A crate
# cannot dev-depend on itself with features, so the store's test-hooks
# feature is forwarded through the server's own.  NEVER enabled in
# release builds.
gc-test-hooks = ["snapstore-store/gc-test-hooks"]

# Declared with required-features so plain `cargo test --workspace` stays
# green (the hooks types are feature-gated out otherwise).
[[test]]
name = "gc_properties"
required-features = ["gc-test-hooks"]

[dependencies]
# workspace deps
prost        = { workspace = true }
prost-types  = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
tonic        = { workspace = true }
tonic-health = { workspace = true }
tonic-types  = { workspace = true }
tower        = { workspace = true }
hyper-util   = { workspace = true }
prometheus   = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
serde        = { workspace = true }
toml         = { workspace = true }

# internal crates
snapstore-store     = { path = "../snapstore-store" }
snapstore-meta      = { path = "../snapstore-meta" }
snapstore-pagestore = { path = "../snapstore-pagestore" }
snapstore-manifest  = { path = "../snapstore-manifest" }
snapstore-types     = { path = "../snapstore-types" }
snapstore-localpath = { path = "../snapstore-localpath" }

# additional
blake3        = "1"
thiserror     = "2"
bytes         = "1"
hyper         = { version = "1", features = ["http1", "server"] }
memmap2       = "0.9"
futures-core  = "0.3"
parking_lot   = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["socket", "uio", "fs", "mman"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
snapstore-testgen = { path = "../snapstore-testgen" }
snapstore-client  = { path = "../snapstore-client" }
snapstore-manifest = { path = "../snapstore-manifest" }
tokio = { workspace = true }
tonic-health = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-stream = { workspace = true }

[[bench]]
name = "grpc_bench"
harness = false

[build-dependencies]
protoc-bin-vendored = { workspace = true }
tonic-build         = { workspace = true }
