[package]
name = "snapstore-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Enable named failpoints at fsync/rename boundaries for crash-consistency
# testing.  Off by default; NEVER enabled in release builds.
# Usage: cargo test -p snapstore-store --features failpoints
failpoints = [
    "dep:fail",
    "fail/failpoints",
    "snapstore-pagestore/failpoints",
]
# Test-only GC instrumentation: interleaving callbacks and deliberately
# broken (sabotaged) cycles for the M7 property suite's negative proofs.
# NEVER enabled in release builds.
gc-test-hooks = ["snapstore-pagestore/gc-test-hooks"]

[dependencies]
snapstore-types = { path = "../snapstore-types" }
snapstore-manifest = { path = "../snapstore-manifest" }
snapstore-pagestore = { path = "../snapstore-pagestore" }
blake3 = "1"
bytes = "1"
parking_lot = "0.12"
thiserror = "2"
fail = { version = "0.5", optional = true }

[dev-dependencies]
snapstore-testgen = { path = "../snapstore-testgen" }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "put_snapshot"
harness = false
